objects/Segment__c.object
<CustomObject>
    <description>A segment is a geographical division of a Super Center.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <description>The specific name for the segment. Used pick-list not to rely on text field</description>
        <inlineHelpText>The specific name for the segment.</inlineHelpText>
        <label>Segment Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Valley</fullName>
                </value>
                <value>
                    <fullName>El Paso</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>New Orleans</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Tallahassee</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>A Sure</fullName>
                </value>
                <value>
                    <fullName>Avondale</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Mesa</fullName>
                </value>
                <value>
                    <fullName>Tucson</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Waymar</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Miner-Equipment</fullName>
                </value>
                <value>
                    <fullName>Corpus Christi</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Super_Center__c</fullName>
        <description>The Super Center this Segment belongs to</description>
        <inlineHelpText>The Super Center this Segment belongs to</inlineHelpText>
        <label>Super Center</label>
        <referenceTo>Super_Center__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>